# pikesquares-mib

./: .gitignore  README.md  build_uninstaller.sh  mib.py  mib.toml  mub.py  pyproject.toml  requirements.txt  test_installer.sh  test_uninstaller.sh  utils.py
_files/Resources/en.lproj/: LICENSE.txt  conclusion.html  welcome.html
_files/binary/: pikesquares-uninstall
_files/scripts/: postinstall
src/mib/: mib.py  mub.py  utils.py
templates/: Distribution  LICENSE.txt  conclusion.html  welcome.html
